    + Fix pod formatting so that the description of the "fixed" command
      actually appears in the manpage.
    + Add an option to not cache resolved bugs (Closes: #340259, #378342)
  * mass-bug: Fix syntax error when reverting to default SENDMAILCMD
  * dd-list: Treat teams.debian.net addresses as mailing lists rather
    than individuals

  [ Martin Zobel-Helas ]
  * debchange: Add volatile to the list of recognised Debian distributions
  * debchange: Add backports to the list of recognised Debian distributions

 -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Fri, 01 Jun 2007 16:56:40 +0100

devscripts (2.10.4) unstable; urgency=low

  [ Adam D. Barratt ]
  * grep-excuses: make the maintainer regex more restrictive to avoid accidental
    matches (Closes: #419462)
  * debchange: make adding multiple changelog blocks for a single maintainer optional
    (Closes: #419880)
  * Conflict with versions of kdesdk-scripts which shipped /usr/bin/licensecheck
    (Closes: #419754)
  * Ensure DEBCHANGE_TZ is always set (Closes: #419863)
  * Add myself to Uploaders

  [ Julian Gilbey ]
  * bts: update tags list to include lenny

  [ Luk Claes ]
  * debian/control: Add myself to Uploaders
  * licensecheck: Escape @kde otherwise build fails

 -- Luk Claes <luk@debian.org>  Mon, 23 Apr 2007 20:22:58 +0200

devscripts (2.10.3) unstable; urgency=low

  [ Adam D. Barratt ]
  * licensecheck: New script to determine which license(s) source files
    are under (Closes: #382148)
  * bts: Add claim / unclaim support, based on a patch by zobel
    (Closes: #385957)
  * debchange: don't add duplicate maintainer blocks in multi-maintainer
    mode (Closes: #383542)
  * Better document debchange's dependencies (Closes: #417633)
  * tagpending
    + Make the wnpp check introduced in 2.10.0 optional as it can be very expensive
    + Improve error message for skipped bugs (Closes: #418884)
  * rmadison: handle missing liburi-perl more gracefully

  [ Mohammed Adnène Trojette ]