@@ -6,8 +6,9 @@
 # Changes copyright 2004-07 by their respective authors.
 #
 # This program is free software; you can redistribute it and/or modify
-# it under the terms of version 2 (only) of the GNU General Public
-# License as published by the Free Software Foundation.
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
 # 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
