@@ -22,12 +22,13 @@ devscripts (2.10.5) UNRELEASED; urgency=low
   * mass-bug: Fix syntax error when reverting to default SENDMAILCMD
   * dd-list: Treat teams.debian.net addresses as mailing lists rather
     than individuals
+  * tagpending: Update license statement to GPL >= 2
 
   [ Martin Zobel-Helas ]
   * debchange: Add volatile to the list of recognised Debian distributions
   * debchange: Add backports to the list of recognised Debian distributions
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Fri, 01 Jun 2007 16:56:40 +0100
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Wed, 06 Jun 2007 17:27:42 +0100
 
 devscripts (2.10.4) unstable; urgency=low
 
